kubernetes/apps/kopiur-system/kopiur/config/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.m00nlit.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia
spec:
  hostnames: ["kopia.${MAIN_DOMAIN}"]
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - name: garage-kopia-ui
          port: 51515
